# beekeeper

./: .gitignore  .hive.toml  README.md  SPEC.md  projects.toml  pyproject.toml
.hive/: project-context.md
examples/: memory.md  projects.toml
scripts/: install-cron.sh
src/beekeeper/: cli.py  llm.py  memory.py  obsidian.py  paths.py  registry.py  scout.py  synthesize.py
src/beekeeper/prompts/: pm-system.md  pm-user.md
src/mission_control/: cli.py  registry.py  scout.py
tests/: test_cli.py  test_integration.py  test_memory.py  test_obsidian.py  test_registry.py  test_scout.py  test_synthesize.py
